<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="=206dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo_foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/login_email"
                android:textColor="#000"
                android:textSize="6pt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="#bbb"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/login_password"
                android:textColor="#000"
                android:textSize="6pt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/login_password_hide"
                android:textAlignment="center"
                android:textColor="#bbb"
                />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_remember_password"
                android:textColor="#333"
                android:textSize="6pt"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/button_login"
                android:onClick="changeToUser"
                android:text="@string/btn_sign_in"
                android:textColor="#000" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/button_login"
                android:onClick="changeToRegister"
                android:text="@string/btn_sign_Up"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_login_info"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>