<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="=206dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo_foreground"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/Sign_in_Name"
                android:textColor="#000"
                android:textSize="6pt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="Insira Seu Nome"
                android:textAlignment="center"
                android:textColor="#bbb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/login_password"
                android:textColor="#000"
                android:textSize="6pt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/login_password_hide"
                android:textAlignment="center"
                android:textColor="#bbb"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/login_email"
                android:textColor="#000"
                android:textSize="6pt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="Insira Seu E-mail"
                android:textAlignment="center"
                android:textColor="#bbb"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/Sign_in_CPF"
                android:textColor="#000"
                android:textSize="6pt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:id="@+id/txtCPF"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="Insira Seu CPF"
                android:textAlignment="center"
                android:textColor="#bbb"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/Sign_in_Celphone"
                android:textColor="#000"
                android:textSize="6pt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:id="@+id/txtCelular"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="Insira Seu Numero"
                android:textAlignment="center"
                android:textColor="#bbb" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/button_login"
                android:text="@string/btn_save_register"
                android:textColor="#000"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>