<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="br.com.fake.steam.UserActivity">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginLeft="45pt"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50pt"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/username" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10pt"
                android:layout_marginTop="50dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="-60dp"
                android:src="@mipmap/ic_search" />

            <Button
                android:id="@+id/btn_user_1"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20pt"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10pt"
                android:background="@drawable/button_login"
                android:text="@string/user_text1"
                android:textColor="#000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10pt"
                android:layout_marginTop="50dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="-50dp"
                android:src="@mipmap/ic_list" />

            <Button
                android:id="@+id/btn_user_2"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20pt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10pt"
                android:background="@drawable/button_login"
                android:text="@string/user_text2"
                android:textColor="#000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10pt"
                android:layout_marginTop="50dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="-50dp"
                android:src="@mipmap/ic_pro" />

            <Button
                android:id="@+id/btn_user_3"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20pt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10pt"
                android:background="@drawable/button_login"
                android:text="@string/user_text3"
                android:textColor="#000" />

            <TextView
                android:id="@+id/btn_user_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="50dp"
                android:text="@string/app_back" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>